# develops_today_test_task

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  postman_collection.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 0001_initial_schema.py
app/application/ports/: artwork_service.py  place_repository.py  project_repository.py
app/application/use_cases/: common.py
app/application/use_cases/places/: add_place.py  get_place.py  list_places.py  update_place.py
app/application/use_cases/projects/: create_project.py  delete_project.py  get_project.py  list_projects.py  update_project.py
app/domain/: constants.py  exceptions.py
app/domain/entities/: place.py  project.py
app/infrastructure/: config.py  database.py  logging.py
app/infrastructure/persistence/: models.py  place_repository.py  project_repository.py
app/presentation/: dependencies.py  main.py  mappers.py
app/presentation/api/v1/places/: router.py  schemas.py
app/presentation/api/v1/projects/: router.py  schemas.py
tests/: conftest.py
tests/integration/: conftest.py  test_places.py  test_projects.py
tests/unit/: conftest.py
tests/unit/use_cases/places/: test_add_place.py  test_get_place.py  test_list_places.py  test_update_place.py
tests/unit/use_cases/projects/: test_create_project.py  test_delete_project.py  test_get_project.py  test_list_projects.py  test_update_project.py
