[project]
name = "develops-today-test-task"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:launch_testing -p no:launch_ros -p no:ament_flake8 -p no:ament_xmllint -p no:ament_pep257 -p no:ament_copyright -p no:ament_lint"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = [
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"app/infrastructure/database.py" = ["F401"]
"alembic/env.py" = ["F401", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python = ".venv"
